--- a/src/ListenTogether/Pages/DesktopShell.xaml
+++ b/src/ListenTogether/Pages/DesktopShell.xaml
@@ -29,11 +29,8 @@
 
     <FlyoutItem Title="发现"
                 Icon="{AppThemeBinding Light=discover.png, Dark=discover_dark.png}">
-        <Tab Title="咪咕音乐">
-            <ShellContent ContentTemplate="{DataTemplate pages:MiGuPage}"/>
-        </Tab>
-        <Tab Title="网易云音乐">
-            <ShellContent ContentTemplate="{DataTemplate pages:NetEasePage}"/>
+        <Tab>
+            <ShellContent ContentTemplate="{DataTemplate pages:DiscoverPage}"/>
         </Tab>
     </FlyoutItem>
 
