--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -13,19 +13,31 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <controls:Loading
-            IsRunning="{Binding IsLoading}"
-            Text="{Binding LoadingText}"/>
-        <StackLayout Grid.Row="0"
-                     Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
-                     Style="{StaticResource StackLayoutLoading}">
-            <StackLayout Margin="0,0,0,20"
-                     Orientation="Horizontal"
-                     VerticalOptions="Start">
+        <StackLayout
+            Grid.Row="0"
+            ZIndex="1"
+            BackgroundColor="{AppThemeBinding Dark={StaticResource DarkBackground},Light={StaticResource LightBackground}}"
+            HorizontalOptions="FillAndExpand"
+            VerticalOptions="FillAndExpand"
+            IsVisible="{Binding IsLogin, Converter={StaticResource InvertedBoolConverter}}">
+            <Label
+                HorizontalOptions="CenterAndExpand"
+                VerticalOptions="CenterAndExpand"
+                Text="用户未登录"/>
+        </StackLayout>
+        <StackLayout
+            Grid.Row="0"
+            Margin="{OnPlatform WinUI=16,MacCatalyst=16,Android='10,5,10,5',iOS='10,5,10,5'}"
+            Style="{StaticResource StackLayoutLoading}">
+            <StackLayout
+                Margin="0,0,0,20"
+                Orientation="Horizontal"
+                VerticalOptions="Start">
 
-                <Label Text="我的歌单"
-                   VerticalTextAlignment="Center"
-                   Style="{StaticResource Title}"/>
+                <Label
+                    Text="我的歌单"
+                    VerticalTextAlignment="Center"
+                    Style="{StaticResource Title}"/>
 
                 <hc:HandCursorStackLayout
                     Margin="20,0,0,0"
